--- a/hw7/captioning.ipynb
+++ b/hw7/captioning.ipynb
@@ -993,6 +993,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 94%|█████████▍| 15/16 [01:15<00:05,  5.17s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    lr.set_value(lasagne.utils.floatX(lr.get_value() * 0.9))\n",
+    "    train_loss=0\n",
+    "    for _ in tqdm(range(n_batches_per_epoch)):\n",
+    "        train_loss += train_step(*generate_batch(img_codes,captions,batch_size))\n",
+    "    train_loss /= n_batches_per_epoch\n",
+    "    \n",
+    "    val_loss=0\n",
+    "    for _ in range(n_validation_batches):\n",
+    "        val_loss += val_step(*generate_batch(img_codes,captions,batch_size))\n",
+    "    val_loss /= n_validation_batches\n",
+    "    \n",
+    "    print('\\nEpoch: {}, train loss: {}, val loss: {}'.format(epoch, train_loss, val_loss))\n",
+    "\n",
+    "print(\"Finish :)\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
